# uopeople-poster

./: .dockerignore  .env.local  .gitignore  Makefile  Memo.md  README.md  docker-compose.yml
api/: .gitignore  Cargo.toml  diesel.toml
api/frontend/: .gitignore  elm.json  main.js  package.json
api/frontend/js/: app.js
api/frontend/public/: first.css  index.html  main.js
api/frontend/src/: Main.elm
api/migrations/2023-05-14-011841_create_informations/: down.sql  up.sql
api/migrations/2023-05-17-122805_create_likes/: up.sql
api/migrations/2023-05-17-123335_create_users/: up.sql
api/public/: index.html
api/src/: application.rs  handler.rs  infrastructures.rs  main.rs  presentation.rs  server.rs
api/src/application/: informations.rs
api/src/domains/: informations.rs  repository.rs
api/src/domains/repository/: informations.rs  likes.rs  users.rs
api/src/infrastructures/: connection.rs  repository.rs  repositoryimpl.rs
api/src/infrastructures/database/: schema.rs
api/src/infrastructures/repository/: informations.rs  users.rs
api/src/infrastructures/repositoryimpl/: informations.rs
api/src/presentation/: middleware.rs  request.rs  router.rs  server.rs
api/src/presentation/handler/: basic.rs  informations.rs
api/src/presentation/middleware/: trace_log.rs
api/src/presentation/request/: basic.rs  informations.rs
api/src/presentation/response/: basic.rs  informations.rs
api/src/presentation/router/: basic.rs  informations.rs  staticfile.rs
api/src/server/: handler.rs  request.rs  response.rs  router.rs
api/src/usecase/: informations.rs
(+2 files in other folders)
